fix scroll down arrow position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ h4  {
 }
 
 section {
-  min-height: 736px;
   min-height: calc(100vh - 50px);
   /*border-bottom: 1px solid #333;*/
   background: url('../img/bg3.png');
@@ -122,6 +121,17 @@ footer p {
   .caption {
     height: 200px;
   }
+
+  section:nth-child(1) {
+    min-height: 620px;
+    height: 100vh;
+  }
+
+  .homepage-scroll {
+    top: 560px;
+  }
+  
+
 }
 
 @media (max-width: 991px) {
@@ -129,7 +139,6 @@ footer p {
     height: 232px;
   }
 }
-
 
 .homepage-text {
   font-family: 'Londrina Solid', cursive;
@@ -169,11 +178,6 @@ footer p {
   animation-name: fadeIn;
   animation-duration: 3s;
   animation-timing-function: ease-in;
-}
-
-.homepage-scroll-placeholder {
-  width: 100%;
-  height: 60px;
 }
 
 .fa-span {
